# pub_hpc22

./: .clang-format  .gitignore  CMakeLists.txt  Pipfile  compile.sh  compile_and_run.sh  job_mpi.sh  job_parallel.sh  job_parallel_single.sh  job_sequential.sh
.run/: mpiexec_3_heat_stencil_2d_par.run.xml  mpiexec_monte_carlo_mpi.run.xml
hw01/: task1_job.sh  task2_osu_bw_averaged.csv  task2_osu_latency_averaged.csv
hw01/task2_files/: job.sh
hw02/task1/: monte_carlo_times_avged.csv
hw02/task1/parallel/: CMakeLists.txt  Makefile  job.sh  monte_carlo_mpi.c  xorshiftSSE.c  xorshiftSSE.h
hw02/task1/sequential/: CMakeLists.txt  Makefile  job.sh  monte_carlo_seq.c
hw02/task2/: CMakeLists.txt  Makefile  heat_stencil_1D_par_non_blocking.c  heat_stencil_times_avged.csv  job.sh  job_mpi.sh
hw03/: 2D_speedup.csv  MPIVectorConfig.h  Matrix2D.cpp  Matrix2D.h  Matrix3D.cpp  Matrix3D.h  MpiConfig.h
hw03/measurments/: 2D_cells_per_sec.csv  2D_time_mess.csv
hw03/parallel/: CMakeLists.txt  gathered.txt  heat_stencil_2d.cpp  heat_stencil_3d.cpp
hw03/sequential/: CMakeLists.txt  gathered2d_seq200_100000  heat_stencil_2d.cpp  heat_stencil_3d.cpp  temperature.txt
hw04/unoptimized_with_io/: gprof_output
hw04/unoptimized_wo_io/: perf.data
hw05/1D_heatstencil/: CMakeLists.txt
hw05/1D_heatstencil/blocking/: heat_stencil_1D_par.c  heat_stencil_1D_par.cpp  heat_stencil_1D_par_send_recive.cpp  heat_stencil_1D_seq.c  heat_stencil_1D_seq.cpp
hw05/1D_heatstencil/non_blocking/: heat_stencil_1D_par.cpp
hw05/1D_heatstencil/nonblocking/: heat_stencil_1D_par_new.c
hw05/2D_heatstencil/: CMakeLists.txt  Location.h  MPIMatrix2D.cpp  MPIMatrix2D.h  Matrix2D.cpp  Matrix2D.h  heat_stencil_2d_nonblocking.cpp  heat_stencil_2d_sendrecv.cpp  heat_stencil_2d_seq.cpp  heat_stencil_common_2d.h
hw05/2D_heatstencil/correctness/: gathered2d_par200_100000_sr
hw06/: CMakeLists.txt  Game.cpp  Game.hpp  Light.cpp  Light.hpp  NBody.cpp  NBody.hpp  Particle.hpp  Sphere.cpp  Sphere.hpp  Utility.hpp  Vector3D.hpp  constants.h  main_graphic.cpp  main_no_graphic.cpp  misc.h  rlights.c  rlights.hpp
hw06/Octree/: Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h  OctreeNodePool.cpp  OctreeNodePool.h  VectorPool.h
hw06/shader/: lighting.fs
hw07/: CMakeLists.txt  Game.cpp  Game.hpp  NBody.cpp  NBody.hpp  Particle.hpp  Vector3D.hpp  constants.h  main_no_graphic.cpp  output.txt
hw07/Octree/: Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h
hw08/: CMakeLists.txt  hsv2rgbSSE.h  mandelbrot_mpi_dlb.cpp  mandelbrot_mpi_naive.cpp  mandelbrot_mpi_naive_symetry.cpp  mandelbrot_mpi_nonblocking.cpp  mandelbrot_seq.cpp  stb_image_write.h
hw08/dlb_specifics/: Image.h  LoadBalancer.h
hw08/sse2neon/: sse2neon.h
hw09-measurements-philipp/: 2.csv  3.csv  run_2.sh
hw10/: 1_mf_ip.cpp  1_sf_ip.cpp  1_sf_sp_c.cpp  1_sf_sp_nc.cpp  2_rank_0_f.cpp  CMakeLists.txt
hw11/: chapel_montecarlo.sh  chapel_montecarlo_two.sh  compile.sh  matmul.chpl  montecarlo.chpl  montecarlo.csv  montecarlo_two.chpl  montecarlo_two.csv  run.sh  run_trought_files.sh  test.sh
visualization/hw03/: plot_heat.py
